# cpp_projects

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md  main.cpp  test.cpp
include/: Descriptor.hpp  Keypoint.hpp  Pixel.hpp  keypoints.hpp  orb.hpp
src/: keypoints.cpp  orb.cpp
